[package]
name = "asm_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.4"
ron = "0.8.1"
serde = { version = "1.0.199", features = ["derive"] }
